<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LauncherActivity">

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.Sensibill.H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/launcher_title_top_margin"
        android:text="@string/launcher_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />'


    <TextView
        android:id="@+id/description"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/launcher_description_padding"
        android:text="@string/launcher_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <!-- Direct Integration -->
    <TextView
        android:id="@+id/direct_integration_title"
        style="@style/TextAppearance.Sensibill.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/launcher_section_margin"
        android:text="@string/launcher_direct_integration_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />'

    <Button
        android:id="@+id/direct_integration_kotlin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/launcher_section_button_margin"
        android:text="@string/launcher_button_kotlin"
        app:layout_constraintEnd_toStartOf="@+id/direct_integration_java"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direct_integration_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/direct_integration_java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launcher_button_java"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/direct_integration_kotlin"
        app:layout_constraintTop_toBottomOf="@+id/direct_integration_title" />


    <!-- Subclass Activity Integration -->
    <TextView
        android:id="@+id/subclass_activity_title"
        style="@style/TextAppearance.Sensibill.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/launcher_section_margin"
        android:text="@string/launcher_subclass_activity_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/direct_integration_kotlin" />'

    <Button
        android:id="@+id/subclass_activity_kotlin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/launcher_section_button_margin"
        android:text="@string/launcher_button_kotlin"
        app:layout_constraintEnd_toStartOf="@+id/subclass_activity_java"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subclass_activity_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/subclass_activity_java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launcher_button_java"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/subclass_activity_kotlin"
        app:layout_constraintTop_toBottomOf="@+id/subclass_activity_title" />


    <!-- Direct Fragment Integration -->
    <TextView
        android:id="@+id/direct_fragment_title"
        style="@style/TextAppearance.Sensibill.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/launcher_section_margin"
        android:text="@string/launcher_direct_fragment_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subclass_activity_kotlin" />'

    <Button
        android:id="@+id/direct_fragment_kotlin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/launcher_section_button_margin"
        android:text="@string/launcher_button_kotlin"
        app:layout_constraintEnd_toStartOf="@+id/direct_fragment_java"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direct_fragment_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/direct_fragment_java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launcher_button_java"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/direct_fragment_kotlin"
        app:layout_constraintTop_toBottomOf="@+id/direct_fragment_title" />


    <!-- Receipt Capture Flow Integration -->
    <TextView
        android:id="@+id/capture_flow_title"
        style="@style/TextAppearance.Sensibill.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/launcher_section_margin"
        android:text="@string/launcher_capture_flow_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/direct_fragment_kotlin" />'

    <Button
        android:id="@+id/capture_flow_kotlin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/launcher_section_button_margin"
        android:text="@string/launcher_button_kotlin"
        app:layout_constraintEnd_toStartOf="@+id/capture_flow_java"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capture_flow_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/capture_flow_java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launcher_button_java"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/capture_flow_kotlin"
        app:layout_constraintTop_toBottomOf="@+id/capture_flow_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
